--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  border: solid 1px red;
+  /* border: solid 1px red; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -156,7 +156,7 @@ color: #6c757d;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: solid 1px rgb(213, 213, 213);
+  
 }
 
 .week-img {
