--- a/src/styles.css
+++ b/src/styles.css
@@ -63,8 +63,11 @@ form {
 }
 
 #error-message {
+  display: flex;
+  justify-content: center;
   font-size: 13px;
   color: red;
+  
 }
 
 #main-container {
